--- a/src/style.scss
+++ b/src/style.scss
@@ -29,10 +29,37 @@ ul {
 .left-container {
   padding: 1rem 4rem;
   flex-basis: 20%;
+  width: 100%;
   background-color: #040b14;
+  transition: all 0.5s ease-in-out;
+  @media screen and (max-width: 600px) {
+    display: none;
+    flex-basis: 45%;
+    padding: 0;
+    height: 100vh;
+  }
 }
 .right-container {
   flex-basis: 80%;
+  @media screen and (max-width: 600px) {
+    flex-basis: 55%;
+  }
+}
+
+.responsive-menu {
+  font-size: 1.4rem;
+  float: right;
+  margin-right: 3rem;
+  margin-top: 2rem;
+  padding: 1rem;
+  border-radius: 50%;
+  background-color: #149ddd;
+  cursor: pointer;
+  display: none;
+
+  @media screen and (max-width: 600px) {
+    display: block;
+  }
 }
 .left-wrap {
   position: fixed;
@@ -40,6 +67,12 @@ ul {
   left: 0;
   margin-top: 4rem;
   margin-left: 3rem;
+  @media screen and (max-width: 600px) {
+    margin: 0;
+    background-color: #040b14;
+    height: 100vh;
+    padding: 3rem 2rem;
+  }
 }
 .intro-name {
   color: white;
@@ -47,6 +80,11 @@ ul {
     text-align: center;
     font-size: 2.2rem;
     padding: 2rem 0;
+
+    @media screen and (max-width: 600px) {
+      font-size: 2rem;
+      text-align: center;
+    }
   }
 
   img {
@@ -89,10 +127,15 @@ ul {
   color: white;
   font-size: 1.8rem;
   margin-top: 4rem;
+  @media screen and (max-width: 600px) {
+    font-size: 1.4rem;
+    margin-top: 3rem;
+  }
 
   li {
     margin-bottom: 1.2rem;
     transition: 0.3s ease;
+    cursor: pointer;
     a {
       color: #fff;
     }
@@ -106,16 +149,28 @@ ul {
   background: no-repeat center center/cover fixed;
   height: 100vh;
   color: #fff;
+  @media screen and (max-width: 600px) {
+    width: 100vw;
+  }
 
   h2 {
     font-size: 4rem;
+    font-weight: 600;
     padding-top: 20rem;
     padding-left: 20rem;
+    @media screen and (max-width: 600px) {
+      font-size: 3rem;
+      padding-left: 10rem;
+    }
   }
-  p {
+  .Typewriter {
     font-size: 2.8rem;
     padding-top: 1.2rem;
     padding-left: 20rem;
+    @media screen and (max-width: 600px) {
+      font-size: 1.8rem;
+      padding-left: 10rem;
+    }
   }
 }
 
@@ -123,9 +178,6 @@ ul {
   padding: 6rem 3rem 0;
   border-bottom: 2px solid #ccc;
 
-  h3 {
-    font-size: 3rem;
-  }
   p {
     font-size: 1.8rem;
     line-height: 1.5;
@@ -150,9 +202,18 @@ ul {
   align-items: center;
   padding-top: 3rem;
   padding-bottom: 3rem;
+
+  @media screen and (max-width: 600px) {
+    padding-top: 1rem;
+    flex-direction: column;
+    align-items: flex-start;
+  }
 }
 .about__my-info-items {
   margin-right: 2rem;
+  @media screen and (max-width: 600px) {
+    margin-top: 1rem;
+  }
 
   a {
     color: #000;
@@ -165,15 +226,18 @@ ul {
 
 // Skills
 .skills {
-  display: flex;
   padding: 6rem 3rem 2rem;
   border-bottom: 2px solid #ccc;
 }
+.skills__container {
+  display: flex;
+  @media screen and (max-width: 600px) {
+    flex-direction: column;
+  }
+}
 .skill-left {
   flex-basis: 40%;
-  h4 {
-    font-size: 3rem;
-  }
+
   p {
     font-size: 1.6rem;
     padding-top: 1.2rem;
@@ -185,6 +249,10 @@ ul {
   display: flex;
   flex-direction: column;
   padding-left: 27.5rem;
+
+  @media screen and (max-width: 600px) {
+    padding-left: 0;
+  }
 }
 .skill-right__img {
   padding-bottom: 1rem;
@@ -200,10 +268,6 @@ ul {
 #education {
   padding: 6rem 3rem 2rem;
   border-bottom: 2px solid #ccc;
-
-  h3 {
-    font-size: 3rem;
-  }
 }
 .edu-container {
   margin-top: 1.2rem;
@@ -224,10 +288,6 @@ ul {
 #projects {
   padding: 6rem 3rem 2rem;
   border-bottom: 2px solid #ccc;
-
-  h3 {
-    font-size: 3rem;
-  }
 }
 
 .projects-wrap {
@@ -239,6 +299,9 @@ ul {
   flex-basis: 33.33333%;
   position: relative;
   transition: all 0.5s ease;
+  @media screen and (max-width: 600px) {
+    flex-basis: 100%;
+  }
   img {
     width: 100%;
     object-fit: cover;
@@ -291,4 +354,15 @@ ul {
   text-align: center;
   font-size: 3rem;
   padding: 4rem 0;
+}
+
+.section-title {
+  font-size: 3rem;
+  @media screen and (max-width: 600px) {
+    font-size: 2rem;
+  }
+}
+
+.show {
+  display: block;
 }
