--- a/src/style.scss
+++ b/src/style.scss
@@ -23,54 +23,54 @@ ul {
 }
 
 .main {
-  display: flex;
-  overflow: hidden;
+  scroll-behavior: smooth;
 }
 
 .left-container {
   padding: 1rem 4rem;
-  flex-basis: 20%;
-  width: 100%;
   background-color: #040b14;
   transition: all 0.5s ease-in-out;
+  position: fixed;
+  inset: 0;
+  width: 300px;
+  z-index: 100;
+
   @media screen and (max-width: 600px) {
     display: none;
-    flex-basis: 45%;
     padding: 0;
-    height: 100vh;
+    width: 200px;
   }
 }
 .right-container {
-  flex-basis: 80%;
+  margin-left: 300px;
 
   @media screen and (max-width: 600px) {
-    flex-basis: 55%;
-    width: 100vw;
+    margin: 0;
   }
 }
 
 .responsive-menu {
-  font-size: 1.4rem;
-  float: right;
-  margin-right: 3rem;
-  margin-top: 2rem;
+  display: inline-block;
   padding: 1rem;
-  border-radius: 50%;
+  border-radius: 60%;
+  font-size: 1.4rem;
   background-color: #149ddd;
   cursor: pointer;
+  position: absolute;
+  top: 2%;
+  right: 5%;
   display: none;
 
   @media screen and (max-width: 600px) {
-    display: block;
+    display: inline-block;
   }
 }
 .left-wrap {
-  position: fixed;
+  // position: fixed;
   top: 0;
   left: 0;
-  margin-top: 4rem;
-  margin-left: 3rem;
-  transition: all 0.5s ease-in-out;
+  // width: 100%;
+  // height: 100%;
   @media screen and (max-width: 600px) {
     margin: 0;
     background-color: #040b14;
@@ -92,15 +92,26 @@ ul {
   }
 
   img {
-    width: 100%;
+    height: 120px;
+    width: 120px;
     border-radius: 50%;
     display: block;
     margin-top: 1.6rem;
+    object-fit: cover;
+    object-position: 0 10%;
+    margin-left: 5rem;
+
+    @media screen and (max-width: 600px) {
+      width: 80px;
+      height: 80px;
+      margin-left: 3rem;
+    }
   }
 }
 .intro-social-media {
   display: flex;
   justify-content: space-around;
+  margin-top: 1.6rem;
   a {
     font-size: 18px;
     display: inline-block;
@@ -153,9 +164,6 @@ ul {
   background: no-repeat center center/cover fixed;
   height: 100vh;
   color: #fff;
-  @media screen and (max-width: 600px) {
-    width: 100vw;
-  }
 
   h2 {
     font-size: 4rem;
@@ -164,7 +172,7 @@ ul {
     padding-left: 20rem;
     @media screen and (max-width: 600px) {
       font-size: 3rem;
-      padding-left: 10rem;
+      padding-left: 8rem;
     }
   }
   .Typewriter {
@@ -173,7 +181,7 @@ ul {
     padding-left: 20rem;
     @media screen and (max-width: 600px) {
       font-size: 1.8rem;
-      padding-left: 10rem;
+      padding-left: 8rem;
     }
   }
 }
@@ -212,8 +220,7 @@ ul {
   align-items: center;
   padding-top: 3rem;
   padding-bottom: 3rem;
-  width: 100vw;
-  overflow: hidden;
+  // overflow: hidden;
 
   @media screen and (max-width: 600px) {
     padding-top: 1rem;
