--- a/src/style.scss
+++ b/src/style.scss
@@ -66,11 +66,8 @@ ul {
   }
 }
 .left-wrap {
-  // position: fixed;
   top: 0;
   left: 0;
-  // width: 100%;
-  // height: 100%;
   @media screen and (max-width: 600px) {
     margin: 0;
     background-color: #040b14;
@@ -310,6 +307,16 @@ ul {
     width: 50px;
     height: 50px;
     margin-right: 2.4rem;
+  }
+
+  &:first-child {
+    padding-top: 0;
+  }
+
+  @media screen and (max-width: 600px) {
+    &:first-child {
+      padding-top: 20px;
+    }
   }
 }
 
